--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@ body {
   font-size: 15px;
   font-weight: normal;
 }
+
+.separator {
+  height: 40px;
+  width: 9999px;
+  color: black;
+  background-color: #c0c0c0;
+}
+
 .feature {
   height: 35px;
   white-space: nowrap;
@@ -28,15 +36,22 @@ body {
   background-color: rgba(255,255,255,0.1);
 }
 .feature:nth-child(odd) {
-  background-color: rgba(0,0,255,0.1);
+  background-color: rgba(128,128,255,0.1);
 }
 
-.feature:nth-child(1) { margin-top: 30px; }
+#details > *:nth-child(1) { margin-top: 30px; }
+#timeline > *:nth-child(1) { margin-top: 30px; }
 
-#details, #timeline {
+#features {
   position: absolute;
   top: 50px;
+  left: 0;
+  right: 0;
   bottom: 0;
+  overflow-y: scroll;
+}
+#details, #timeline {
+  position: absolute;
 }
 
 #details {
@@ -52,7 +67,7 @@ body {
 #timeline .feature {
   position: relative;
   left: 0;
-  width: 2000px; /* TODO: Make this dynamic or tied to number of milestones */
+  width: 9999px; /* TODO: Make this dynamic or tied to number of milestones */
 }
 
 .flag,
@@ -67,7 +82,7 @@ body {
 .ot {
   position: relative;
   display: inline-block;
-  background-color: #00cc00;
+  background-color: #32cd32;
   left: 0;
   height: 12px;
   margin-top: 4px;
@@ -75,7 +90,7 @@ body {
   text-align: center;
 }
 .ot:hover {
-  background-color: #00dd00;
+  background-color: #32de32;
   left: 0;
   height: 16px;
   margin-top: 2px;
@@ -92,8 +107,8 @@ body {
 }
 .milestone:nth-child(even) { background-color: #ffffff; }
 .milestone:nth-child(odd)  { background-color: #f7f7f7; }
-.milestone.selected:nth-child(even) { background-color: #e7e7ff; }
-.milestone.selected:nth-child(odd)  { background-color: #e0e0f7; }
+.milestone.selected:nth-child(even) { background-color: #e0e0f7; }
+.milestone.selected:nth-child(odd)  { background-color: #e7f0fd; }
 .milestone small {
   font-size: 80%;
   color: firebrick;
@@ -143,10 +158,10 @@ body {
 .stars .bar {
   display: inline-block;
   height: 15px;
-  background-color: blue;
+  background-color: #4080FF;
 }
 .stars:hover .bar {
-  background-color: red;
+  background-color: #b22222;
 }
 .where {
   position: absolute;
@@ -159,64 +174,173 @@ body {
 <div id=header>
   🐡 Chromium Fugu API Tracker <small>https://goo.gle/fugu-api-tracker</small>
 </div>
-
-<div id=details>
+<div id=features>
+  <div id=details></div>
+  <div id=timeline></div>
 </div>
 
-<div id=timeline>
-</div>
-
+<script src="config.js"></script>
 <script>
 const $ = document.querySelector.bind(document);
 const $$ = document.querySelectorAll.bind(document);
 window.addEventListener('DOMContentLoaded', async e => {
 
-  const features = [
-    {
-      name: 'feature1',
-      owner: 'Google',
-      flag: 80,
-      otStart: 81,
-      otEnd: 83,
-      ship: 84,
-      id: 1234,
-      stars: 100,
-      where: '💻📱',
-    },
-    {
-      name: 'feature2',
-      owner: 'Google',
-      flag: 81,
-      otStart: 82,
-      otEnd: 86,
-      ship: 87,
-      id: 5123,
-      stars: 20,
-      where: '💻📌',
-    },
-    {
-      name: 'feature3',
-      owner: 'Microsoft',
-      flag: 80,
-      otStart: 83,
-      otEnd: 86,
-      ship: 87,
-      id: 98767,
-      stars: 50,
-      where: '📱',
-    },
-    {
-      name: 'overlap',
-      owner: 'Intel',
-      flag: 80,
-      otStart: 80,
-      otEnd: 80,
-      ship: 80,
-      id: 1234567,
-      stars: 10,
-      where: '💻📱',
-    },
-  ];
+
+  // ============================================================
+  // Fetch and process data
+
+  const data = parseCSV(await (await fetch('issues.csv')).text());
+
+  function parseCSV(csv) {
+    const lines = csv
+      .split('\n')
+      .filter(line => line)
+      .map(line => ',' + line)
+      .map(line => {
+        const matches = [];
+        const re = /,"((?:""|[^"])*?)"/g;
+        let match;
+        while (match = re.exec(line)) matches.push(match[1]);
+        return matches;
+      });
+    const header = lines.shift();
+    return lines.map(line =>
+      Object.fromEntries(line.map((col, index) => [header[index], col]))
+    );
+  }
+
+  // Given a field e.g. "M-80, OS-Android, Pri-1, Proj-Fugu, Target-77, Type-Feature"
+  // extract the value of a label prefix, e.g. for "M" return "80".
+  // Optional suffix can be specified as well (as 3rd argument).
+  function getLabel(prefix, labels, opt_suffix) {
+    prefix = prefix + '-';
+    const suffix = opt_suffix ? '-' + opt_suffix : '';
+
+    labels = labels
+      .split(/,\s*/g)
+      .filter(label => label.startsWith(prefix))
+      .filter(label => label.endsWith(suffix))
+      .map(label => label.substring(prefix.length))
+      .map(label => label.substring(0, label.length - suffix.length))
+      .sort((a, b) => a - b)
+      .reverse();
+    if (!labels.length)
+      return '';
+    return labels[0];
+  }
+
+  let features = data.map(parsed => {
+
+    const labels = parsed['AllLabels'];
+    const row = {
+      id: parsed['ID'],
+      type: parsed['Type'],
+      priority: parsed['Pri'],
+      status: parsed['Status'],
+      os: parsed['OS'],
+      milestone: Number(getLabel('M', labels) || getLabel('Launch-M-Approved', labels, 'Stable')),
+      otMilestone: Number(getLabel('OriginTrial', labels)),
+      otEndMilestone: Number(getLabel('OriginTrialEnd', labels)),
+      targetMilestone: Number(getLabel('Target', labels)),
+      devTrialMilestone: Number(getLabel('DevTrial', labels)),
+      summary: parsed['Summary'],
+      owner: parsed['Owner'],
+      components: parsed['Component'].split(/,\s*/g),
+      stars: parsed['Stars'],
+      labels: labels,
+    };
+
+    // Use Target-X as a fallback if M-X is not present.
+    if (row.targetMilestone && !row.milestone) {
+      row.milestone = row.targetMilestone;
+    }
+
+    if (row.otMilestone && !row.otEndMilestone) {
+      row.otEndMilestone = row.milestone ? (row.milestone - 1) : (row.otMilestone + kDefaultOTDuration - 1);
+    }
+
+    return row;
+  });
+
+  // More processing....
+
+  function assignPartition(row) {
+    if (row.milestone && row.milestone <= kStableMilestone) {
+      return Partitions.shipped;
+    }
+
+    // EXPERIMENTAL: For things that finished w/o dates
+    if (!row.milestone && row.status === 'Fixed') {
+      return Partitions.fixed;
+    }
+
+    if (row.otMilestone && row.otMilestone <= kStableMilestone) {
+      return Partitions.originTrial;
+    }
+
+    if (row.devTrialMilestone && row.devTrialMilestone <= kStableMilestone) {
+      return Partitions.devTrial;
+    }
+
+    if (row.status === 'Started') {
+      return Partitions.started;
+    }
+
+    return Partitions.backlog;
+  }
+
+  // Generic compareFunc for sorting, returning -1/0/1. Works for strings or numbers.
+  function cmp(a, b) {
+    return a < b ? -1 : a > b ? 1 : 0;
+  }
+
+  // Milestone compare - treat "no milestone" as greater than any milestone.
+  function cmpMilestone(a, b) {
+    return cmp(a || 999, b || 999);
+  }
+
+  function compareRows(a, b) {
+    if (a.partition !== b.partition) {
+      return cmp(a.partition, b.partition);
+    }
+
+    if (a.partition === Partitions.shipped) {
+      a.sortMilestone = a.milestone;
+      b.sortMilestone = b.milestone;
+    } else if (a.partition === Partitions.originTrial) {
+      a.sortMilestone = a.otEndMilestone;
+      b.sortMilestone = b.otEndMilestone;
+    } else {
+      a.sortMilestone = a.devTrialMilestone || a.otMilestone || a.milestone;
+      b.sortMilestone = b.devTrialMilestone || b.otMilestone || b.milestone;
+    }
+
+    return cmpMilestone(a.sortMilestone, b.sortMilestone) ||
+           cmp(a.id, b.id);
+  }
+
+  features.forEach(feature => {
+    function owner(s) {
+      if (!s) return s;
+      let org = s.split('@')[1].split('.')[0];
+      if (org === 'chromium') org = 'google';
+      return org.charAt(0).toUpperCase() + org.slice(1);
+    }
+
+    feature.owner = owner(feature.owner);
+
+    feature.partition = assignPartition(feature);
+  });
+
+  features = features
+    .filter(row => row.status !== 'WontFix' && row.status !== 'Duplicate')
+    .filter(row => row.type !== 'FLT-Launch')
+    .filter(row => row.partition !== Partitions.fixed); // EXPERIMENTAL: Strip these out
+  features.sort(compareRows);
+
+
+  // ============================================================
+  // Construct display
 
   const GLYPH_WIDTH = 20;
   // Map milestone to x position / width
@@ -230,28 +354,45 @@ window.addEventListener('DOMContentLoaded', async e => {
   }
 
 
+  function addSeparator(label, url) {
+    const details = Object.assign(document.createElement('div'), {className: 'separator', textContent: label});
+    if (url)
+      details.innerHTML += ` (<a target=_blank href="${url}">details</a>)`;
+    const timeline = Object.assign(document.createElement('div'), {className: 'separator'});
+
+    $('#details').append(details);
+    $('#timeline').append(timeline);
+  }
+
+  let curPartition;
   features.forEach(feature => {
+    if (feature.partition !== curPartition) {
+      curPartition = feature.partition;
+      addSeparator(PartitionDetails[curPartition].label, PartitionDetails[curPartition].url);
+    }
+
+
     const details = Object.assign(document.createElement('div'), {className: 'feature'});
     details.innerHTML =
       `<!--
-      --><span class=name>${feature.name}</span><!--
+      --><span class=name>${feature.summary}</span><!--
       --><span class=owner><span class=abbrev>${feature.owner[0]}</span><span class=full>${feature.owner}</span></span><!--
       --><span class=crbug><a target=_blank href="https://crbug.com/${feature.id}">${feature.id}</span><!--
-      --><span class=stars title="${feature.stars} stars"><span class=bar style="width: ${feature.stars/4}px"></span></span><!--
+      --><span class=stars title="${feature.stars} stars"><span class=bar style="width: ${Math.min(feature.stars, kMaxStars)/4}px"></span></span><!--
       --><span class=where>${feature.where}</span><!--
       -->`;
 
     const timeline = Object.assign(document.createElement('div'), {className: 'feature'});
-    const flag    = mtox(feature.flag) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
-    const otStart = mtox(feature.otStart);
-    const otEnd   = mtox(feature.otEnd + 1);
-    const ship    = mtox(feature.ship) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
+    const flag    = mtox(feature.devTrialMilestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
+    const otStart = mtox(feature.otMilestone);
+    const otEnd   = mtox(feature.otEndMilestone + 1);
+    const ship    = mtox(feature.milestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
 
     timeline.innerHTML =
       `<!--
       --><span class=flag title="Behind a Flag" style="margin-left: ${flag}px">🏴</span><!--
       --><span class=ot   title="Origin Trial"  style="margin-left: ${otStart - flag}px; width: ${otEnd - otStart}px;">
-        Origin Trial: ${feature.otStart} - ${feature.otEnd}
+        Origin Trial: ${feature.otMilestone} - ${feature.otEndMilestone}
       </span><!--
       --><span class=ship title="Ship"          style="margin-left: ${ship - otEnd}px; ">🐡</span><!--
       -->`;
@@ -261,6 +402,9 @@ window.addEventListener('DOMContentLoaded', async e => {
     $('#timeline').append(timeline);
 
   });
+
+  // ============================================================
+  // Milestone labels/background
 
   let scrollTarget, lastTarget;
   for (let m = FIRST_MILESTONE; m < FIRST_MILESTONE + 30; ++m) {
@@ -281,27 +425,7 @@ window.addEventListener('DOMContentLoaded', async e => {
   // Scroll all the way to the right, then back to the left.
   lastTarget.scrollIntoView();
   scrollTarget.scrollIntoView();
-
-  const data = parseCSV(await (await fetch('issues.csv')).text());
-
-  function parseCSV(csv) {
-    const lines = csv
-      .split('\n')
-      .filter(line => line)
-      .filter((line,index) => index < 5)
-      .map(line => ',' + line)
-      .map(line => {
-        const matches = [];
-        const re = /,"((?:""|[^"])*?)"/g;
-        let match;
-        while (match = re.exec(line)) matches.push(match[1]);
-        return matches;
-      });
-    const header = lines.shift();
-    return lines.map(line =>
-      Object.fromEntries(line.map((col, index) => [header[index], col]))
-    );
-  }
+  $('#header').scrollIntoView();
 
 });
 
