--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ body {
   width: 9999px;
   color: black;
   background-color: #c0c0c0;
+  /*position: sticky; TODO: Try and make this work */
+  top: 30px;
+  z-index: 1;
 }
 
 .feature {
@@ -50,6 +53,7 @@ body {
   right: 0;
   bottom: 0;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 #details, #timeline
 {
@@ -58,6 +62,7 @@ body {
 
 #details {
   left: 0; width: 450px;
+  border-right: 5px solid #dddddd;
 }
 
 #timeline {
@@ -121,6 +126,12 @@ body {
   left: 10px;
   display: inline-block;
   overflow: hidden;
+  width: 190px;
+  text-overflow: ellipsis; /* TODO: Full name on hover */
+}
+.name:hover {
+  width: auto;
+  z-index: 100;
 }
 
 .owner {
@@ -233,7 +244,7 @@ window.addEventListener('DOMContentLoaded', async e => {
 
     const labels = parsed['AllLabels'];
     const row = {
-      id: parsed['ID'],
+      id: Number(parsed['ID']),
       type: parsed['Type'],
       priority: parsed['Pri'],
       status: parsed['Status'],
@@ -368,6 +379,8 @@ window.addEventListener('DOMContentLoaded', async e => {
   }
 
 
+
+
   function addSeparator(label, url) {
     const details = Object.assign(document.createElement('div'), {className: 'separator', textContent: label});
     if (url)
@@ -406,17 +419,23 @@ window.addEventListener('DOMContentLoaded', async e => {
 
 
     // TODO: Make sticky things push each other out
+    // Probably need:
+    //   <container><sticky/></container>  <container><sticky/></container>  <container><sticky/></container>
+    //   sticky thing only "sticks" as long as container is visible
     // TODO: Dummy sticky thing at start of OT to push flag out
 
-    timeline.innerHTML =
-      `<!--
-      --><span class=flag title="Behind a Flag" style="margin-left: ${flag}px">🏴</span><!--
-      --><span class=ot   title="Origin Trial"  style="margin-left: ${otStart - flag}px; width: ${otEnd - otStart}px;">
-        Origin Trial: ${feature.otMilestone} - ${feature.otEndMilestone}
-      </span><!--
-      --><span class=ship title="Ship"          style="margin-left: ${ship - otEnd}px; ">🐡</span><!--
-      -->`;
+    {
+      let html = '';
+      html += `<span class=flag title="Behind a Flag" style="margin-left: ${flag}px">🏴</span>`;
 
+      html += `<span class=ot   title="Origin Trial"  style="margin-left: ${otStart - flag}px; width: ${otEnd - otStart}px;">
+        Origin Trial: ${feature.otMilestone} - ${feature.otEndMilestone}
+      </span>`;
+
+      html += `<span class=ship title="Ship"          style="margin-left: ${ship - otEnd}px; ">🐡</span>`;
+
+      timeline.innerHTML = html;
+    }
 
     $('#details').append(details);
     $('#timeline').append(timeline);
@@ -429,6 +448,7 @@ window.addEventListener('DOMContentLoaded', async e => {
   let scrollTarget, lastTarget;
   for (let m = FIRST_MILESTONE; m < FIRST_MILESTONE + 30; ++m) {
     const e = Object.assign(document.createElement('div'), {className: 'milestone', textContent: m});
+
     e.style.left = `${mtox(m)}px`;
     e.style.width = `${PIXELS_PER_MILESTONE}px`;
 
@@ -442,10 +462,15 @@ window.addEventListener('DOMContentLoaded', async e => {
     $('#timeline').append(e);
   }
 
+
+
+
   // Scroll all the way to the right, then back to the left.
   lastTarget.scrollIntoView();
   scrollTarget.scrollIntoView();
   $('#header').scrollIntoView();
+
+
 
 });
 
