Working glyph stickyness

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@ body {
 .ship {
   display: inline-block;
   position: sticky;
-  x-background-color: inherit;
   left: 0;
   width: 20px;
-  margin-right: -20px;
+  margin-left: 35px;
 }
 .ot {
   position: relative;
@@ -411,12 +410,6 @@ window.addEventListener('DOMContentLoaded', async e => {
       details.innerHTML = html;
     }
 
-    const timeline = Object.assign(document.createElement('div'), {className: 'feature'});
-    const flag    = mtox(feature.devTrialMilestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
-    const otStart = mtox(feature.otMilestone);
-    const otEnd   = mtox(feature.otEndMilestone + 1);
-    const ship    = mtox(feature.milestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
-
 
     // TODO: Make sticky things push each other out
     // Probably need:
@@ -424,15 +417,35 @@ window.addEventListener('DOMContentLoaded', async e => {
     //   sticky thing only "sticks" as long as container is visible
     // TODO: Dummy sticky thing at start of OT to push flag out
 
+    const timeline = Object.assign(document.createElement('div'), {className: 'feature'});
     {
+
+
+      //const flag    = mtox(feature.devTrialMilestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
+      //const ship    = mtox(feature.milestone) + PIXELS_PER_MILESTONE/2 - GLYPH_WIDTH/2;
+
+      // TODO: Handle overlaps somehow? DT + OT is the main one
+
       let html = '';
-      html += `<span class=flag title="Behind a Flag" style="margin-left: ${flag}px">🏴</span>`;
+      if (feature.devTrialMilestone) {
+        const start = feature.devTrialMilestone;
+        const end   = feature.otMilestone || feature.milestone || kMaxMilestone;
+        const x1 = mtox(start), x2 = mtox(end);
+        html += `<span style="position: absolute; display: block; display: inline-block; left: ${x1}px; width: ${x2-x1}px;"><span class=flag>${Glyphs.devTrial}</span></span>`;
+      }
+      if (feature.otMilestone) {
+        const start = feature.otMilestone;
+        const end   = feature.otEndMilestone + 1;
+        const x1 = mtox(start), x2 = mtox(end);
+        html += `<span style="position: absolute; display: block; left: ${x1}px; width: ${x2-x1}px;" class=ot>Origin Trial: ${feature.otMilestone} - ${feature.otEndMilestone}</span>`;
+      }
 
-      html += `<span class=ot   title="Origin Trial"  style="margin-left: ${otStart - flag}px; width: ${otEnd - otStart}px;">
-        Origin Trial: ${feature.otMilestone} - ${feature.otEndMilestone}
-      </span>`;
-
-      html += `<span class=ship title="Ship"          style="margin-left: ${ship - otEnd}px; ">🐡</span>`;
+      if (feature.milestone) {
+        const start = feature.milestone;
+        const end   = kMaxMilestone;
+        const x1 = mtox(start), x2 = mtox(end);
+        html += `<span style="position: absolute; display: block; left: ${x1}px; width: ${x2-x1}px;"><span class=ship>${Glyphs.ship}</span></span>`;
+      }
 
       timeline.innerHTML = html;
     }
